2011-10-11  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* utils.sgml (getconf): Expand documentation.

2011-10-10  Corinna Vinschen  <corinna@vinschen.de>

	* ldd.cc (VERSION): Remove.

2011-10-10  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* ldd.cc: Update copyright.

2011-10-10  Corinna Vinschen  <corinna@vinschen.de>

	* Align usage output, version output, as well as usage and version
	option handling to use the same style throughout all Cygwin utils.
	Throughout use program_invocation_short_name to refer to current
	process name in Cygwin executables.
	* utils.sgml: Align documentation to above change.  Add missing
	sections for getconf, ldd, and setmetamode.
	* strace.cc (proc_child): Avoid compiler warning.

2011-10-10  Andy Koppe <andy.koppe@gmail.com>
	    Corinna Vinschen  <corinna@vinschen.de>

	* locale.cc (usage): Restructure, rephrase, add new options.  Drop
	arguments, don't exit.
	(print_version): New function.
	(longopts): Add -f, -n, and -V options.  Reorder.
	(opts): Add -f, -n, and -V options.
	(main): Call GetSystemDefaultUILanguage for -s option.  Call
	GetUserDefaultUILanguage for -u option.  Add -f and -n options and
	call GetUserDefaultLCID and GetSystemDefaultLCID respectively.  Return
	0 after calling usage in -h case.  Add -V option and call print_version.
	Don't print full usage in default case, rather just a short help message
	similar to GNU tools.
	* utils.sgml (locale): Align to above changes.  Rephrase description.

2011-10-10  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc (check_keys): Use UNICODE Win32 functions.

2011-09-12  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* strace.cc (attach_process): Try to turn off DEBUG_ONLY_THIS_PROCESS
	if Attaching to a process with the trace-children flag set.
	(handle_output_debug_string): Apparently we don't need to explicitly
	attach for debugging when a child process starts
	* Makefile.in (strace.exe): Link with ntdll
